--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 .dayschedule {
 	width: 300px;
 	text-align: center;
+	font-family: 'Open Sans',Helvetica,Arial,sans-serif;
 }
 
 .dayschedule.box { width: 220px; }
