--- a/css/schedule.css
+++ b/css/schedule.css
@@ -55,3 +55,21 @@
 a.day-name.day-type-other {
     color: black;
 }
+
+/*
+.bellschedule-table tr.current th:before {
+    content: "\f0da";
+    float: left;
+    font-family: FontAwesome;
+}
+
+.bellschedule-table tr.current td:after {
+    content: "\f0d9";
+    float: right;
+    font-family: FontAwesome;
+}
+*/
+
+tr.schedule-block.current {
+    font-weight: bold;
+}
