--- a/css/schedule.css
+++ b/css/schedule.css
@@ -1,75 +1,64 @@
 .bellschedule-table {
-    margin: 0;
-    width: 100%;
-}
+  margin: 0;
+  width: 100%; }
+  .bellschedule-table tr {
+        /*
+        &.current th {
+            &:before {
+                content: "\f0da";
+                float: left;
+                font-family: FontAwesome;
+            }
 
-.bellschedule-table tr th {
-    text-align: right;
-    padding-right: 14px;
-    white-space: nowrap;
-    /* hack that makes text centered when overflowed */
-    margin-left: -100%;
-    margin-right: -100%;
-}
-
-.bellschedule-table tr td {
-    text-align: left;
-    width: 100px;
-    vertical-align: middle;
-    white-space: nowrap;
-    /* hack that makes text centered when overflowed */
-    margin-left: -100%;
-    margin-right: -100%;
-}
+            &:after {
+                content: "\f0d9";
+                float: right;
+                font-family: FontAwesome;
+            }
+        }
+        */ }
+    .bellschedule-table tr th {
+      text-align: right;
+      padding-right: 14px;
+      white-space: nowrap;
+      /* hack that makes text centered when overflowed */
+      margin-left: -100%;
+      margin-right: -100%; }
+    .bellschedule-table tr td {
+      text-align: left;
+      width: 100px;
+      vertical-align: middle;
+      white-space: nowrap;
+      /* hack that makes text centered when overflowed */
+      margin-left: -100%;
+      margin-right: -100%; }
 
 .schedule h2 {
-    white-space: nowrap;
-    /* hack that makes text centered when overflowed */
-    margin-left: -100%;
-    margin-right: -100%;
-}
-
+  white-space: nowrap;
+  /* hack that makes text centered when overflowed */
+  margin-left: -100%;
+  margin-right: -100%; }
 
 .button-center {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 107px;
-    height: 35px;
-    margin-left: -53.5px;
-    margin-top: -12.5px;
-}
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 107px;
+  height: 35px;
+  margin-left: -53.5px;
+  margin-top: -12.5px; }
 
 .day-name.day-type-blue {
-    color: blue;
-}
-
+  color: blue; }
 .day-name.day-type-red {
-    color: red;
-}
-
+  color: red; }
 .day-name.day-type-anchor {
-    color: green;
-}
+  color: green; }
 
 a.day-name.day-type-other {
-    color: black;
-}
-
-/*
-.bellschedule-table tr.current th:before {
-    content: "\f0da";
-    float: left;
-    font-family: FontAwesome;
-}
-
-.bellschedule-table tr.current td:after {
-    content: "\f0d9";
-    float: right;
-    font-family: FontAwesome;
-}
-*/
+  color: black; }
 
 tr.schedule-block.current {
-    font-weight: bold;
-}
+  font-weight: bold; }
+
+/*# sourceMappingURL=schedule.css.map */
