--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,21 +1,19 @@
 @import 'reset';
 @import 'colors';
 
-$font-stack: "Open Sans", "Helvetica Neue", sans-serif;
+$font-stack: BlinkMacSystemFont, "San Francisco", "Oxygen", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
 
 body {
     font-family: $font-stack;
     font-size: 13px;
-    color: $grey;
-    background-color: rgb(242, 242, 244);
+    //color: $grey;
+    color: WindowText;
+    background-color: Window;
     line-height: 1.4;
 }
 
 .notransition {
     -webkit-transition: none !important;
-    -moz-transition: none !important;
-    -ms-transition: none !important;
-    -o-transition: none !important;
     transition: none !important;
 }
 
@@ -80,36 +78,25 @@ input[type="reset"] {
     white-space: nowrap;
 
     -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
     border-radius: 3px;
 
     // Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f7f7f4+0,eaeaea+100;Button
     background: #f7f7f4;
-    background: -moz-linear-gradient(top, #f7f7f4 0%, #eaeaea 100%);
-    background: -webkit-linear-gradient(top, #f7f7f4 0%,#eaeaea 100%);
     background: linear-gradient(to bottom, #f7f7f4 0%,#eaeaea 100%);
-    //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f4', endColorstr='#eaeaea',GradientType=0 );
 
     border: 1px solid rgb(221, 221, 221);
     border-bottom-color: rgb(197, 197, 197);
 
     -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .05);
-    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .05);
-    -pie-box-shadow: none;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .05);
 
     vertical-align: middle;
     cursor: pointer;
 
     -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
 
     -webkit-appearance: none;
-    -moz-appearance: none;
-    -o-appearance: none;
     appearance: none;
 
     behavior: url("/static/js/PIE/PIE.htc");
@@ -120,10 +107,8 @@ input[type="reset"] {
 
         // Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eaeaea+0,dadada+100;ButtonHover
         background: #eaeaea;
-        background: -moz-linear-gradient(top, #eaeaea 0%, #dadada 100%);
         background: -webkit-linear-gradient(top, #eaeaea 0%,#dadada 100%);
         background: linear-gradient(to bottom, #eaeaea 0%,#dadada 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eaeaea', endColorstr='#dadada',GradientType=0 );
     }
 
     &:active {
@@ -138,10 +123,8 @@ input[type="reset"] {
 
         // Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eaeaea+0,dadada+100;ButtonHover
         background: #eaeaea;
-        background: -moz-linear-gradient(top, #eaeaea 0%, #dadada 100%);
         background: -webkit-linear-gradient(top, #eaeaea 0%, #dadada 100%);
         background: linear-gradient(to bottom, #eaeaea 0%, #dadada 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eaeaea', endColorstr='#dadada', GradientType=0 );
     }
 
     &:disabled {
@@ -172,16 +155,12 @@ textarea {
     border: 1px solid rgb(204, 204, 204);
 
     -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
     border-radius: 3px;
 
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .075);
-    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .075);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, .075);
 
     //-webkit-transition: border 0.05s ease-in 0;
-    //-moz-transition: border 0.05s ease-in 0;
-    //-o-transition: border 0.05s ease-in 0;
     //transition: border 0.05s ease-in;
 
     vertical-align: middle;
@@ -303,9 +282,6 @@ td.list-item {
 
     * {
         -webkit-transition: initial !important;
-        -moz-transition: initial !important;
-        -ms-transition: initial !important;
-        -o-transition: initial !important;
         transition: initial !important;
     }
 }
@@ -346,15 +322,6 @@ body.fire * {
     -webkit-animation-name: fire !important;
     -webkit-animation-duration: 1s;
     -webkit-animation-iteration-count: infinite;
-    -moz-animation-name: fire !important;
-    -moz-animation-duration: 1s;
-    -moz-animation-iteration-count: infinite;
-    -ms-animation-name: fire !important;
-    -ms-animation-duration: 1s;
-    -ms-animation-iteration-count: infinite;
-    -o-animation-name: fire !important;
-    -o-animation-duration: 1s;
-    -o-animation-iteration-count: infinite;
     animation-name: fire !important;
     animation-duration: 1s;
     animation-iteration-count: infinite;
@@ -362,42 +329,6 @@ body.fire * {
 }
 
 @-webkit-keyframes fire {
-    0% {text-shadow:0 -2px 2px #A00000,0 -4px 2px #F08000,0 -6px 2px #FF0}
-    10% {text-shadow:0 -2px 2px #A00000,-1px -4px 2px #F08000,-6px -5px 2px #FF0}
-    20% {text-shadow:0 -1px 2px #A00000,-1px -3px 2px #F08000,-2px -5px 2px #FF0}
-    30% {text-shadow:0 -2px 2px #A00000,-1px -4px 2px #F08000,-6px -5px 2px #FF0}
-    50% {text-shadow:0 -2px 2px #A00000,0 -5px 2px #F08000,0 -8px 2px #FF0}
-    60% {text-shadow:0 -2px 2px #A00000,1px -4px 2px #F08000,2px -6px 2px #FF0}
-    70% {text-shadow:0 -1px 2px #A00000,1px -3px 2px #F08000,2px -5px 2px #FF0}
-    80% {text-shadow:0 -2px 2px #A00000,1px -4px 2px #F08000,2px -6px 2px #FF0}
-    100% {text-shadow:0 -2px 2px #A00000,0 -4px 2px #F08000,0 -6px 2px #FF0}
-}
-
-@-moz-keyframes fire {
-    0% {text-shadow:0 -2px 2px #A00000,0 -4px 2px #F08000,0 -6px 2px #FF0}
-    10% {text-shadow:0 -2px 2px #A00000,-1px -4px 2px #F08000,-6px -5px 2px #FF0}
-    20% {text-shadow:0 -1px 2px #A00000,-1px -3px 2px #F08000,-2px -5px 2px #FF0}
-    30% {text-shadow:0 -2px 2px #A00000,-1px -4px 2px #F08000,-6px -5px 2px #FF0}
-    50% {text-shadow:0 -2px 2px #A00000,0 -5px 2px #F08000,0 -8px 2px #FF0}
-    60% {text-shadow:0 -2px 2px #A00000,1px -4px 2px #F08000,2px -6px 2px #FF0}
-    70% {text-shadow:0 -1px 2px #A00000,1px -3px 2px #F08000,2px -5px 2px #FF0}
-    80% {text-shadow:0 -2px 2px #A00000,1px -4px 2px #F08000,2px -6px 2px #FF0}
-    100% {text-shadow:0 -2px 2px #A00000,0 -4px 2px #F08000,0 -6px 2px #FF0}
-}
-
-@-ms-keyframes fire {
-    0% {text-shadow:0 -2px 2px #A00000,0 -4px 2px #F08000,0 -6px 2px #FF0}
-    10% {text-shadow:0 -2px 2px #A00000,-1px -4px 2px #F08000,-6px -5px 2px #FF0}
-    20% {text-shadow:0 -1px 2px #A00000,-1px -3px 2px #F08000,-2px -5px 2px #FF0}
-    30% {text-shadow:0 -2px 2px #A00000,-1px -4px 2px #F08000,-6px -5px 2px #FF0}
-    50% {text-shadow:0 -2px 2px #A00000,0 -5px 2px #F08000,0 -8px 2px #FF0}
-    60% {text-shadow:0 -2px 2px #A00000,1px -4px 2px #F08000,2px -6px 2px #FF0}
-    70% {text-shadow:0 -1px 2px #A00000,1px -3px 2px #F08000,2px -5px 2px #FF0}
-    80% {text-shadow:0 -2px 2px #A00000,1px -4px 2px #F08000,2px -6px 2px #FF0}
-    100% {text-shadow:0 -2px 2px #A00000,0 -4px 2px #F08000,0 -6px 2px #FF0}
-}
-
-@-o-keyframes fire {
     0% {text-shadow:0 -2px 2px #A00000,0 -4px 2px #F08000,0 -6px 2px #FF0}
     10% {text-shadow:0 -2px 2px #A00000,-1px -4px 2px #F08000,-6px -5px 2px #FF0}
     20% {text-shadow:0 -1px 2px #A00000,-1px -3px 2px #F08000,-2px -5px 2px #FF0}
